updates to rules and comments

--- a/test/html/index.html
+++ b/test/html/index.html
@@ -93,7 +93,7 @@
                             <ul>
                                 <li>Upgraded pieces</li>
                                 <li>Created when 3 kittens align</li>
-                                <li>Each cat in that line turns into a cat</li>
+                                <li>Each kitten in that line turns into a cat</li>
                                 <li>Can boop both kittens and cats</li>
                                 <li>Three aligned cats wins the game</li>
                             </ul>
@@ -108,7 +108,6 @@
                         <li>When a piece is placed next to other pieces, it "boops" them</li>
                         <li>Booped pieces move one space away from the booping piece</li>
                         <li>If a piece is booped off the board, it returns to the player's stock</li>
-                        <li>Players must place all their kittens before using cats</li>
                     </ul>
                 </section>
 
