--- a/test/html/game.html
+++ b/test/html/game.html
@@ -16,7 +16,7 @@
         .board-container {
             position: relative;
             background-color: white !important;
-            padding: 2rem 5rem 5rem 2rem !important;  /* Reduced from 8rem to 6rem */
+            padding: 2rem 5rem 5rem 2rem !important; 
             border-radius: 12px !important;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1) !important;
             margin: 2rem auto !important;
@@ -158,7 +158,7 @@
                             <ul>
                                 <li>Upgraded pieces</li>
                                 <li>Created when 3 kittens align</li>
-                                <li>Each cat in that line turns into a cat</li>
+                                <li>Each kitten in that line turns into a cat</li>
                                 <li>Can boop both kittens and cats</li>
                                 <li>Three aligned cats wins the game</li>
                             </ul>
@@ -173,7 +173,6 @@
                         <li>When a piece is placed next to other pieces, it "boops" them</li>
                         <li>Booped pieces move one space away from the booping piece</li>
                         <li>If a piece is booped off the board, it returns to the player's stock</li>
-                        <li>Players must place all their kittens before using cats</li>
                     </ul>
                 </section>
 
